// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card #1 renders 1`] = `
<svg
  class="card-svg-wrapper"
  height="640px"
  viewBox="0 0 640 320"
  width="1280px"
  xmlns="http://www.w3.org/2000/svg"
>
  <foreignobject
    height="320"
    width="640"
    x="0"
    y="0"
  >
    <div
      class="jsx-95c052ed20ab27ca card-wrapper theme-light"
      style="font-family: Inter; background: rgb(255, 255, 255) url(data:image/svg+xml,%3Csvg%20width%3D%2242%22%20height%3D%2244%22%20viewBox%3D%220%200%2042%2044%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M0%200h42v44H0V0zm1%201h40v20H1V1zM0%2023h20v20H0V23zm22%200h20v20H22V23z%22%20fill%3D%22%23eaeaea%22%20fill-opacity%3D%220.6%22%20fill-rule%3D%22evenodd%22%2F%3E%3C%2Fsvg%3E);"
      xmlns="http://www.w3.org/1999/xhtml"
    >
      <div
        class="jsx-95c052ed20ab27ca card-logo-wrapper"
      >
        <i
          class="jsx-95c052ed20ab27ca devicon-github-original colored"
        />
      </div>
      <p
        class="jsx-95c052ed20ab27ca card-name-wrapper"
        style="font-size: 40px;"
      >
        <span
          class="jsx-95c052ed20ab27ca card-name-owner"
        />
        <span
          class="jsx-95c052ed20ab27ca card-name-name"
        >
          project_name
        </span>
      </p>
    </div>
  </foreignobject>
</svg>
`;

exports[`Card #2 renders 1`] = `
<svg
  class="card-svg-wrapper"
  height="640px"
  viewBox="0 0 640 320"
  width="1280px"
  xmlns="http://www.w3.org/2000/svg"
>
  <foreignobject
    height="320"
    width="640"
    x="0"
    y="0"
  >
    <div
      class="jsx-95c052ed20ab27ca card-wrapper theme-dark"
      style="font-family: KoHo; background: rgb(0, 0, 0) url(data:image/svg+xml,%3Csvg%20width%3D%2242%22%20height%3D%2244%22%20viewBox%3D%220%200%2042%2044%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M0%200h42v44H0V0zm1%201h40v20H1V1zM0%2023h20v20H0V23zm22%200h20v20H22V23z%22%20fill%3D%22%23eaeaea%22%20fill-opacity%3D%220.2%22%20fill-rule%3D%22evenodd%22%2F%3E%3C%2Fsvg%3E);"
      xmlns="http://www.w3.org/1999/xhtml"
    >
      <div
        class="jsx-95c052ed20ab27ca card-logo-wrapper"
      >
        <img
          alt="Custom logo"
          class="jsx-95c052ed20ab27ca"
          src="data:image/gif;base64,R0lGODlhAQABAAAAACw="
        />
        <span
          class="jsx-95c052ed20ab27ca card-logo-divider"
        >
          +
        </span>
        <i
          class="jsx-95c052ed20ab27ca devicon-javascript-plain "
        />
      </div>
      <p
        class="jsx-95c052ed20ab27ca card-name-wrapper"
        style="font-size: 40px;"
      >
        <span
          class="jsx-95c052ed20ab27ca card-name-owner"
        >
          owner/
        </span>
        <span
          class="jsx-95c052ed20ab27ca card-name-name"
        >
          project_name
        </span>
      </p>
      <p
        class="jsx-95c052ed20ab27ca card-description-wrapper"
      >
        TEST DESCRIPTION
      </p>
      <div
        class="jsx-95c052ed20ab27ca card-badges-wrapper"
      >
        <div
          class="jsx-b201194f83df212a badge-wrapper"
        >
          <p
            class="jsx-b201194f83df212a badge-label"
          >
            stars
          </p>
          <p
            class="jsx-b201194f83df212a badge-value"
            style="background-color: rgb(223, 179, 23);"
          >
            1
          </p>
        </div>
        <div
          class="jsx-b201194f83df212a badge-wrapper"
        >
          <p
            class="jsx-b201194f83df212a badge-label"
          >
            forks
          </p>
          <p
            class="jsx-b201194f83df212a badge-value"
            style="background-color: rgb(151, 202, 0);"
          >
            2
          </p>
        </div>
        <div
          class="jsx-b201194f83df212a badge-wrapper"
        >
          <p
            class="jsx-b201194f83df212a badge-label"
          >
            issues
          </p>
          <p
            class="jsx-b201194f83df212a badge-value"
            style="background-color: rgb(0, 126, 198);"
          >
            3
          </p>
        </div>
        <div
          class="jsx-b201194f83df212a badge-wrapper"
        >
          <p
            class="jsx-b201194f83df212a badge-label"
          >
            pulls
          </p>
          <p
            class="jsx-b201194f83df212a badge-value"
            style="background-color: rgb(254, 125, 55);"
          >
            4
          </p>
        </div>
      </div>
    </div>
  </foreignobject>
</svg>
`;
